@@ -248,6 +248,7 @@ AC_CONFIG_FILES([schroot/Makefile])
 AC_CONFIG_FILES([schroot/pam/Makefile])
 AC_CONFIG_FILES([schroot/run/Makefile])
 AC_CONFIG_FILES([schroot/setup/Makefile])
+AC_CONFIG_FILES([schroot/dchroot.1])
 AC_CONFIG_FILES([schroot/schroot.1])
 AC_CONFIG_FILES([schroot/schroot-setup.5])
 AC_CONFIG_FILES([schroot/schroot.conf.5])
